SERVER-37487 Aborting a prepared transaction must not respect maxTransactionLockMillis