src/mongo/db/s/shard_server_op_observer.h
@@ -138,7 +138,8 @@ public:
 
     void onTransactionPrepare(OperationContext* opCtx, const OplogSlot& prepareOpTime) override {}
 
-    void onTransactionAbort(OperationContext* opCtx) override {}
+    void onTransactionAbort(OperationContext* opCtx,
+                            boost::optional<OplogSlot> abortOplogEntryOpTime) override {}
 
     void onReplicationRollback(OperationContext* opCtx, const RollbackObserverInfo& rbInfo) {}
 };
